# SMSFilterPurePython

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pom.xml  pyproject.toml
backend/: pom.xml
backend/api/: pom.xml  pyproject.toml
backend/api/src/api/: dependencies.py  schemas.py  webapp.py
backend/api/src/api/routers/: sms_filter.py
backend/predictor/: pom.xml  pyproject.toml
backend/predictor/src/predictor/: __init__.py  predict.py  schemas.py
backend/settings/: pom.xml  pyproject.toml
backend/settings/src/settings/: __init__.py  settings.py
docker/: pom.xml
docker/backend-docker/: pom.xml
docker/backend-docker/src/main/resources/docker/: Dockerfile
