[project]
name = "smsfilter-api"
version = "0.0.1.dev"
description = "FastAPI backend for SMS Filter."
requires-python = ">=3.12.0, <3.13.0"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.35.0",
    "smsfilter-predictor",
]

[tool.uv]
dev-dependencies = ["ruff>=0.12.1"]
package = true

[tool.uv.sources]
smsfilter-predictor = { path = "../predictor", editable = true }

[dependency-groups]
smsfilter_dependency_group = ["smsfilter-predictor"]

# Added by habushu-maven-plugin at 2026-01-18T17:29:32.262750852 to use https://pypi.org/simple/ as source repository for installing dependencies
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/simple/"
